<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContact">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_contact_details"
        android:textColor="@color/primary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_website"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_location"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivGreen"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/happy" />

        <ImageView
            android:id="@+id/ivYellow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/caution" />

        <ImageView
            android:id="@+id/ivRed"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/flag" />
    </LinearLayout>
</LinearLayout>